--- a/conf/php/php.ini
+++ b/conf/php/php.ini
@@ -925,6 +925,7 @@ default_socket_timeout = 60
 ;extension=php_xmlrpc.dll
 ;extension=php_xsl.dll
 
+extension=swoole.so
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
 ;;;;;;;;;;;;;;;;;;;
